--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@ header nav a:hover {
     text-decoration: line-through;
 }
 
+
 main section {
     min-height: 100vh;
     padding-top: 5rem;
@@ -60,7 +61,7 @@ footer p {
     align-items: center;
 }
 
-#oppgavesett-3 {
+#oppgavesett-3 h1 {
     font-size: 3rem;
     text-transform: uppercase;
 }
@@ -68,4 +69,8 @@ footer p {
 /* Oppgave 1 & 2*/
 h1 {
     margin-top: 5rem;
+}
+
+p {
+    margin-top: 2rem;
 }
